<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.application.TERMSOFUSEActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:onClick="Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_backspace_white_24dp"/>
            <TextView
                android:id="@+id/tv_toolbar_album"
                android:layout_marginLeft="10dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="Điều khoản sử dụng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_margin="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            style="@style/titleTextTersmofuser"
            android:text="1. Điều khoản sử dụng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/contentTextTersmofuser"
            android:text="@string/text_tearmofuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/titleTextTersmofuser"
            android:text="2. Giới thiệu về ứng dụng"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/contentTextTersmofuser"
            android:text="@string/review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/titleTextTersmofuser"
            android:text="3. Quyền sở hữu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/contentTextTersmofuser"
            android:text="@string/ownership"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/titleTextTersmofuser"
            android:text="4. Tài khoản"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/contentTextTersmofuser"
            android:text="@string/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/titleTextTersmofuser"
            android:text="5. Liên lạc với chúng tôi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/contentTextTersmofuser"
            android:text="@string/contact1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            style="@style/contentTextTersmofuser"
            android:text="@string/contact2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>