<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.account.SigUpActivity">
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary">
            <ImageView
                android:onClick="Back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_keyboard_backspace_white_24dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="Đăng Kí"
                android:textColor="@color/color_White"
                android:textSize="18dp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginRight="150dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="2"
            android:background="@drawable/bodertoplogin"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:id="@+id/ln_bt_anm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="10dp"
            android:layout_weight="2"
            android:background="@drawable/boder_login_bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LnEDIText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/opasity"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"

        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="MissingConstraints"></LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ln_bg_anm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingTop="5dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/txt_anim_sigup"
                    style="@style/TextToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:background="@drawable/bodertoplogin"
                    android:gravity="center"
                    android:text="WellCome"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:id="@+id/ln_anim_sigup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"

                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:counterEnabled="true"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:background="@drawable/borderedittextlogin"
                        app:counterMaxLength="20">
                        <EditText
                            android:id="@+id/edtUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_username"
                            android:imeOptions="actionNext"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        app:counterEnabled="true"
                        android:layout_margin="1dp"
                        android:layout_height="50dp"
                        android:background="@drawable/borderedittextlogin"
                        app:counterMaxLength="100">

                        <EditText
                            android:id="@+id/editEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_Email"
                            android:imeOptions="actionNext"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:background="@drawable/borderedittextlogin"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <EditText
                            android:id="@+id/editPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_Password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_margin="1dp"
                        android:background="@drawable/borderedittextlogin"
                        app:counterEnabled="true"
                        app:counterMaxLength="20">

                        <EditText
                            android:id="@+id/editRePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/sign_up_Confirm"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:singleLine="true" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/btn_anim_sigup"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/boderbuttonlogin"
                    android:onClick="signUp"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    style="@style/TextToolbar"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>