<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.account.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.Toolbar
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:layout_marginLeft="25dp"
                android:text="Đăng Nhập"
                style="@style/TextToolbar"
                android:textColor="@color/color_White"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_height="0dp"
            android:layout_marginRight="150dp"
            android:background="@drawable/bodertoplogin"
            android:orientation="horizontal">

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ln_bt_anm"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="150dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:background="@drawable/boder_login_bottom"
            tools:ignore="MissingConstraints">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/sigup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/boderbuttonlogin"
                    android:orientation="vertical"
                    android:text="Đăng Kí"
                    android:textAllCaps="false"
                    style="@style/TextToolbar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.917"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="MissingConstraints"></Button>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="5dp">
        <LinearLayout
            android:id="@+id/ln_login"
            android:background="@drawable/opasity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/LnEDIText"
                android:layout_marginTop="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:counterEnabled="true"
                    android:layout_margin="1dp"
                    android:background="@drawable/borderedittextlogin"
                    app:counterMaxLength="100">
                    <EditText
                        android:singleLine="true"
                        android:imeOptions="actionNext"
                        android:id="@+id/edt_Email_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:counterEnabled="true"
                    android:layout_margin="1dp"
                    android:background="@drawable/borderedittextlogin"
                    app:passwordToggleEnabled="true"
                    app:counterMaxLength="100">
                    <EditText
                        android:singleLine="true"
                        android:imeOptions="actionDone"
                        android:id="@+id/edt_password_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:id="@+id/btLogin"
                android:background="@drawable/boderbuttonlogin"
                android:onClick="signIn"
                android:textAllCaps="false"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:text="@string/login_sign_in"
                style="@style/TextToolbar"/>
            <TextView
                android:onClick="Forgotpass"
                android:id="@+id/loginFace"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:textColor="@android:color/white"
                android:text="Quên mật khẩu?"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>